ocaml/golden/errors/e300_rate_is_probability.camdl
# E300: recovery rate uses a probability parameter instead of rate
# p:probability * I has dimension P (count), not P*T^-1
time_unit = 'days

compartments { S, I, R }

let N = S + I + R

parameters {
  beta  : rate
  p     : probability
}

transitions {
  infection : S --> I  @ beta * S * I / N
  recovery  : I --> R  @ p * I
}

init {
  S = 990
  I = 10
}

simulate {
  from = 0 'days
  to   = 100 'days
}
